<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimaryDark"

    >

    <Button
        android:id="@+id/btnJugar"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/rounded_buttons"
        android:drawableLeft="@android:drawable/ic_media_play"
        android:text="@string/Jugar"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnRanking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAcercaDe"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/rounded_buttons"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:text="@string/AcercaDe"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRanking"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_buttons"
        android:drawableStart="@android:drawable/btn_star"
        android:text="@string/Ranking"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnAyuda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAyuda"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/rounded_buttons"
        android:drawableStart="@android:drawable/ic_menu_help"
        android:text="@string/Ayuda"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnAcercaDe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="323dp"
        android:layout_height="168dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="89dp"
        app:layout_constraintBottom_toTopOf="@+id/btnJugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/imagenapp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="85dp"
        android:text="@string/titulo"
        android:textColor="@color/icons"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="25dp"
        android:text="Probar Servidor"
        app:layout_constraintBottom_toTopOf="@+id/btnJugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="241dp"
        android:layout_height="43dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="85dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColor="@color/divider"
        android:textSize="20dp"
        />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gif"
        android:layout_width="57dp"
        android:layout_height="185dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="132dp"
        android:src="@drawable/updated"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnJugar" />

</androidx.constraintlayout.widget.ConstraintLayout>
