<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DataFragment"
    android:background="@color/icons"
    >


    <TextView
        android:id="@+id/txtBarco2"
        android:layout_width="28dp"
        android:layout_height="18dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="148dp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBarco3"
        android:layout_width="28dp"
        android:layout_height="18dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/cronometro"
        android:layout_width="62dp"
        android:layout_height="22dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"

        android:textColor="@color/colorPrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Chronometer>

    <TextView
        android:id="@+id/txtTiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="23dp"
        android:text="@string/tiempo"
        app:layout_constraintEnd_toStartOf="@+id/cronometro"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorPrimaryText"
        />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/barco4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:src="@drawable/barco3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:src="@drawable/barco2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="10dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="x"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="10dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="84dp"
        android:text="x"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="8dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="144dp"
        android:text="x"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBarco4"
        android:layout_width="28dp"
        android:layout_height="18dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="34dp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="150dp"
        android:layout_height="28dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="29dp"
        android:background="@color/colorAccent"
        android:text="@string/guardar"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtBarco3"
        app:layout_constraintTop_toBottomOf="@+id/cronometro" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="169dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:visibility="invisible"
        android:hint="@string/nombreGuardar"
        android:inputType="textPersonName"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtBarco3"
        app:layout_constraintTop_toBottomOf="@+id/btnGuardar" />

    <TextView
        android:id="@+id/txtEstadoBarco"
        android:layout_width="156dp"
        android:layout_height="28dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBarco2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="84dp"
        android:layout_height="37dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="65dp"
        android:text="@string/intentos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtBarco4"
        app:layout_constraintTop_toBottomOf="@+id/cronometro"
        android:textColor="@color/colorPrimaryText"
        />

    <TextView
        android:id="@+id/txtIntentos"
        android:layout_width="26dp"
        android:layout_height="18dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/cronometro"
        android:textColor="@color/colorPrimaryText"
        />

    <ImageView
        android:id="@+id/imvState"
        android:layout_width="45dp"
        android:layout_height="32dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="7dp"
        android:src="@color/icons"
        app:layout_constraintEnd_toStartOf="@+id/txtEstadoBarco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="107dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:text="Salir
"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtEstadoBarco"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        android:background="@drawable/navigationbuttons"
        />

</androidx.constraintlayout.widget.ConstraintLayout>